--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <section class="user-details d-flex justify-content-between align-items-center">
     <h1><span class="fw-bold text-capitalize">hello</span> {{ user?.name }}</h1>
-    <a  data-bs-toggle="modal" data-bs-target="#exampleModal" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i></a>
+    <a  data-bs-toggle="modal" data-bs-target="#Edit" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i></a>
   </section>
   <section class="recipes-wrapper mt-5">
     <div class="title">
@@ -53,7 +53,7 @@
     </div>
   </section>
 </div>
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="Edit" tabindex="-1" aria-labelledby="Edit" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
