--- a/front/src/app/component/search-input/search-input.component.html
+++ b/front/src/app/component/search-input/search-input.component.html
@@ -5,7 +5,9 @@
         <input class="form-control" type="text" placeholder="Search for recipes..." aria-label="Search"
             [(ngModel)]="searchQuery" (input)="search(searchQuery)"
         >
-        <i class="fa-solid fa-x clear" (click)="onClear()"></i>
+        @if(searchQuery){
+            <i class="fa-solid fa-x clear" (click)="onClear()"></i>
+        }
     </div>
 
     <div *ngIf="(searchResults$ | async)?.length as resultsLength" class="dropdown-list">
