--- a/front/src/app/component/payment/payment-cancel/payment-cancel.component.html
+++ b/front/src/app/component/payment/payment-cancel/payment-cancel.component.html
@@ -2,7 +2,7 @@
   <h1 class="h1 text-danger-emphasis">looks like something went wrong</h1>
   <h1 class="h3">consider trying again</h1>
   <div class="controls d-flex gap-3 mt-3">
-    <button class="btn btn-outline-success text-capitalize">try again</button>
-    <button class="btn btn-outline-dark text-capitalize">cancel</button>
+    <a class="btn btn-outline-success text-capitalize" routerLink="/payment">try again</a>
+    <a class="btn btn-outline-dark text-capitalize" routerLink="/profile">cancel</a>
   </div>
 </div>
