--- a/front/src/app/component/payment/payment.component.html
+++ b/front/src/app/component/payment/payment.component.html
@@ -35,7 +35,7 @@
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">favorite recipes</span>
         </li>
         <li class="mb-2">
-          <i class="fa-solid fa-xmark text-danger me-2"></i> <span class="text-capitalize feature">leave a comment</span>
+          <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">leave a comment</span>
         </li>
         <li class="mb-2">
           <i class="fa-solid fa-xmark text-danger me-2"></i> <span class="text-capitalize feature">share your socials</span>
