--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -1,13 +1,17 @@
-<div class="container mt-5">
+<!-- <div *ngIf="isPremium" >
+  <h1>hello from premium</h1>
+</div> -->
+
+<div class="container my-5">
   <section class="user-details d-flex justify-content-between align-items-center">
-    <h1><span class="fw-bold text-capitalize">hello</span> {{ user?.name }}</h1>
+    <h1 class="text-capitalize"><span class="fw-bold text-capitalize">hello</span> {{ user?.name }}</h1>
     <a  data-bs-toggle="modal" data-bs-target="#exampleModal" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i></a>
   </section>
   <section class="recipes-wrapper mt-5">
     <div class="title">
       <h1 class="fw-bold text-capitalize">your favorite recipes</h1>
     </div>
-    <div class="body mt-4 d-flex gap-3 overflow-x-scroll">
+    <div class="body mt-4 d-flex gap-3 overflow-x-auto">
       <div *ngFor="let recipe of user?.recipes_saves">
         <div
           class="card border-0"
@@ -27,12 +31,13 @@
       </div>
     </div>
   </section>
-  <section class="recipes-wrapper mt-5">
+  <!-- premium ========================================================================================= -->
+  <section class="recipes-wrapper mt-5" *ngIf="isPremium">
     <div class="title d-flex justify-content-between align-items-center">
       <h1 class="fw-bold text-capitalize">your magic</h1>
       <a routerLink="/add-recipe/{{ user.id }}" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
     </div>
-    <div class="body mt-4 d-flex gap-3 overflow-x-scroll">
+    <div class="body mt-4 d-flex gap-3 overflow-x-auto">
       <div *ngFor="let recipe of user?.recipes">
         <div
           class="card border-0"
@@ -52,7 +57,31 @@
       </div>
     </div>
   </section>
+  <!-- regular ========================================================================================= -->
+  <!-- <section class="mt-5 bg-body-secondary px-5 py-3 rounded d-flex justify-content-between">
+    <h1>get more! get premium!</h1>
+    <button class="btn btn-success fw-bold text-uppercase">go!</button>
+  </section> -->
+  <!-- premium banner -->
+<section class="ad-banner mt-5">
+  <div class="container" style="background-color: #395963;">
+      <div class="row p-4 align-items-center">
+          <div class="borderSection">
+              <!-- Content Section -->
+              <div class="col-12 userContent">
+                  <h1 class="text-white text-uppercase">get premium</h1>
+                  <p class="mb-5 mt-3 text-white w-75">
+                      support us and get more, add you're own recipies to our webiste, let the world see your magic with our premium one time payment!
+                  </p>
+                  <a class="main-btn shadow-none fw-bold" routerLink="/payment">check it</a>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
 </div>
+
+<!-- edit popup ========================================================================================= -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
