--- a/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
+++ b/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
@@ -1,30 +1,125 @@
-<div class="container d-flex justify-content-center">
-    <div class="w-50">
-        <h1 class="h3 text-center fw-bold text-uppercase mb-4 col-12">Edit Recipe</h1>
-
-        <form [formGroup]="editForm" (ngSubmit)="editRecipe()">
-            <div class="mb-3 inputs">
-                <label for="recipeId" class="form-label">Id:</label>
-                <input type="number" class="form-control w-25" id="recipeId" formControlName="id" readonly />
-            </div>
-            <div class="mb-3 inputs">
-                <label for="recipeName" class="form-label">Name:</label>
-                <input type="text" class="form-control w-50" id="recipeName" formControlName="name" />
-            </div>
-            <div class="mb-3 inputs">
-                <label for="recipeUserName" class="form-label">Username:</label>
-                <input type="text" class="form-control w-25" id="recipeUserName" formControlName="user.name" />
-            </div>
-
-            <!-- Image Preview -->
-            <div class="mb-2 inputs">
-                <img [src]="editForm.get('image')?.value" alt="Recipe Image" width="200" class="img-thumbnail" />
-            </div>
-
-            <!-- Image File Input -->
-            <input type="file" class="form-control" id="recipeImage" (change)="onImageUpload($event)" accept="image/*" />
-
-            <button type="submit" class="btn text-light mt-4 mb-5">Save Changes</button>
-        </form>
+<div class="container-fluid">
+    
+    <div class="row" >
+        <h1 class="h3  fw-bold text-uppercase mb-4 col-12">Edit Recipe</h1>
+        <div class="mb-2 col-lg-4">
+            <img [src]="editForm.get('image')?.value" alt="Recipe Image"  class="img-thumbnail" />
+        </div>
+        <div class="col-lg-8">
+            <form [formGroup]="editForm" (ngSubmit)="editRecipe()" >
+            
+                <label for="recipeId" class="form-label">image:</label>
+                <input type="text" class="form-control" id="recipeImage" (change)="onImageUpload($event)" accept="image/*" formControlName="image"/>
+                <div class="mb-3 ">
+                    <label for="recipeId" class="form-label">Id:</label>
+                    <input type="number" class="form-control " id="recipeId" formControlName="id" readonly />
+                </div>
+                <div class="mb-3 ">
+                    <label for="recipeName" class="form-label">Name:</label>
+                    <input type="text" class="form-control " id="recipeName" formControlName="name" />
+                </div>
+                <div class="mb-3 ">
+                    <label for="recipeUserName" class="form-label">Username:</label>
+                    <input type="text" class="form-control " id="recipeUserName" formControlName="Username" />
+                </div>
+                <div class="mb-3 ">
+                    <label for="Servings" class="form-label">Servings:</label>
+                    <input type="number" class="form-control " id="Servings" formControlName="Servings" />
+                </div>
+                <div class="mb-3 ">
+                    <label for="time" class="form-label">Time:</label>
+                    <input type="text" class="form-control " id="time" formControlName="time" />
+                </div>
+                <div class="mb-3 ">
+                    <label for="Description" class="form-label">Description:</label>
+                    <input type="text" class="form-control" id="time" formControlName="Description" />
+                </div>
+                <div class="mb-3 ">
+                    <label for="Direction" class="form-label">Direction:</label>
+                    <input type="text" class="form-control " id="time" formControlName="Direction" />
+                </div>
+                <div formArrayName="ingredients">
+                    <div
+                      *ngFor="let ingredient of ingredients.controls; let i = index"
+                      [formGroupName]="i"
+                      class="row"
+                    >
+                      <div class="col-4">
+                        <label for="ingredientName">Ingredient Name:</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="ingredientName"
+                          placeholder="ingredient..."
+                          formControlName="name"
+                        />
+                        <div
+                          *ngIf="
+                            ingredient.get('name')?.invalid && ingredient.get('name')?.touched
+                          "
+                        >
+                          Ingredient name is required.
+                        </div>
+                      </div>
+              
+                      <div class="col-4">
+                        <label for="quantity">Quantity:</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="quantity"
+                          placeholder="quantity..."
+                          formControlName="quantity"
+                        />
+                        <div
+                          *ngIf="
+                            ingredient.get('quantity')?.invalid &&
+                            ingredient.get('quantity')?.touched
+                          "
+                        >
+                          Quantity is required.
+                        </div>
+                      </div>
+              
+                      <div class="col-4">
+                        <label for="measurementUnit">Measurement Unit:</label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="measurementUnit"
+                          placeholder="measurement unit..."
+                          formControlName="measurement_unit"
+                        />
+                        <div
+                          *ngIf="
+                            ingredient.get('measurement_unit')?.invalid &&
+                            ingredient.get('measurement_unit')?.touched
+                          "
+                        >
+                          Measurement unit is required.
+                        </div>
+                      </div>
+              
+                      <div class="ingredient-controls mt-3 d-flex">
+                        <button
+                          type="button"
+                          class="btn text-light me-4"
+                          (click)="removeIngredient(i)"
+                        >
+                          Remove Ingredient
+                        </button>
+                        <button
+                          type="button"
+                          class="btn text-light"
+                          (click)="addIngredient()"
+                        >
+                          Add Ingredient
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                <button type="submit" class="btn text-light mt-4 mb-5">Save Changes</button>
+            </form>
+        </div>
     </div>
 </div>
