--- a/front/src/app/component/admin/admin-user/admin-user.component.html
+++ b/front/src/app/component/admin/admin-user/admin-user.component.html
@@ -20,8 +20,8 @@
             <td>{{ data.id }}</td>
             <td>{{ data.name }}</td>
             <td>{{ data.email }}</td>
-            <td class="text-center">
-                <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i>
+            <td class="text-center" (click)="routeToEdit(data.id)">
+                <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);" ></i>
             </td>
 
             <!-- Delete Button -->
