--- a/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
@@ -34,8 +34,8 @@
             </td>
 
             <!-- Edit Button -->
-            <td class="text-center">
-                <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i>
+            <td class="text-center" (click)="editPendingRecipe(data.id)">
+                <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);" ></i>
             </td>
 
             <!-- Delete Button -->
