--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -11,7 +11,8 @@
     <div class="title">
       <h1 class="fw-bold text-capitalize">your favorite recipes</h1>
     </div>
-    <div class="body mt-4 d-flex gap-3 overflow-x-auto">
+    <div class="body mt-4 d-flex gap-3 overflow-x-auto"  *ngIf="user.recipes_saves.length > 0">
+
       <div *ngFor="let recipe of user?.recipes_saves">
         <div
           class="card border-0"
@@ -30,6 +31,14 @@
         </div>
       </div>
     </div>
+    <div class="row d-flex justify-content-center flex-column align-items-center" *ngIf="user.recipes_saves.length==0 " >
+      <!-- <div class="col-lg-1 col-m-2 col-sm-3 col-4">
+       <img src="assets/img/heart.png" alt="empty" class="w-100">
+      </div> -->
+      <div class="p-5">
+        <h3 class="text-center text-secondary p-5">Your Favorite List is Empty Fill it with recipes to come back to !!</h3>
+      </div>
+    </div>
   </section>
   <!-- premium ========================================================================================= -->
   <section class="recipes-wrapper mt-5" *ngIf="isPremium">
@@ -37,7 +46,7 @@
       <h1 class="fw-bold text-capitalize">your magic</h1>
       <a routerLink="/add-recipe/{{ user.id }}" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
     </div>
-    <div class="body mt-4 d-flex gap-3 overflow-x-auto">
+    <div class="body mt-4 d-flex gap-3 overflow-x-auto" *ngIf="user.recipes.length!=0">
       <div *ngFor="let recipe of user?.recipes">
         <div
           class="card border-0"
@@ -56,6 +65,16 @@
         </div>
       </div>
     </div>
+    <div class="row d-flex justify-content-center">
+      <!-- <div *ngIf="user.recipes.length==0 " class="col-lg-2 col-m-3 col-sm-3 col-4">
+      
+        <img src="assets/img/empty-box_4826310.png" alt="empty" class="w-100">
+      </div> -->
+      <div class="p-5">
+        <h3 class="text-center text-secondary p-5">Share your culinary magic with us and get featured on our website! Send your favorite recipe  !!</h3>
+      </div>
+    </div>
+    
   </section>
   <!-- regular ========================================================================================= -->
   <!-- <section class="mt-5 bg-body-secondary px-5 py-3 rounded d-flex justify-content-between">
@@ -63,7 +82,8 @@
     <button class="btn btn-success fw-bold text-uppercase">go!</button>
   </section> -->
   <!-- premium banner -->
-<section class="ad-banner mt-5">
+<section class="ad-banner mt-5"  *ngIf="!isPremium">
+
   <div class="container" style="background-color: #395963;">
       <div class="row p-4 align-items-center">
           <div class="borderSection">
