added user role in admin

--- a/front/src/app/component/admin/admin-user/admin-user.component.html
+++ b/front/src/app/component/admin/admin-user/admin-user.component.html
@@ -11,6 +11,7 @@
             <th>Id</th>
             <th>Name</th>
             <th>Email</th>
+            <th>Role</th>
             <th class="text-center">Edit</th>
             <th class="text-center">Delete</th>
         </tr>
@@ -20,6 +21,7 @@
             <td>{{ data.id }}</td>
             <td>{{ data.name }}</td>
             <td>{{ data.email }}</td>
+            <td>{{ data.role }}</td>
             <td class="text-center">
                 <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i>
             </td>
