--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -3,7 +3,10 @@
     <div class="logo w-25">
       <img [src]="logo" alt="Logo" routerLink="" class="w-25">
     </div>
-  
+  <!-- Toggle button for small screens -->
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
     <!-- Search Bar -->
     <app-search-input></app-search-input>
     
