--- a/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-pending-recipes/admin-pending-recipes.component.html
@@ -1,8 +1,8 @@
 <!-- Recipes Section -->
 <p-table [value]="pendingRecipes" [paginator]="true" [rows]="4">
     <ng-template pTemplate="caption">
-        <div class="flex align-items-center justify-content-between fs-3 dataName">
-            Pending Recipes
+        <div class="fs-3 dataName">
+            <h1>Pending Recipes</h1>
         </div>
     </ng-template>
 
