--- a/front/src/app/component/admin/admin-user/admin-user.component.html
+++ b/front/src/app/component/admin/admin-user/admin-user.component.html
@@ -2,8 +2,8 @@
 <!-- User Section -->
 <p-table [value]="users" [paginator]="true" [rows]="4">
     <ng-template pTemplate="caption">
-        <div class="flex align-items-center justify-content-between fs-3 dataName">
-            Users
+        <div class="fs-3 dataName">
+            <h1>Users</h1>
         </div>
     </ng-template>
     <ng-template pTemplate="header">
@@ -21,9 +21,9 @@
             <td>{{ data.id }}</td>
             <td>{{ data.name }}</td>
             <td>{{ data.email }}</td>
+            <td>{{ data.role }}</td>
             <td class="text-center" (click)="routeToEdit(data.id)">
                 <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);" ></i>
-            <td>{{ data.role }}</td>
             <td class="text-center">
                 <i class="fa-solid fa-pen-to-square" style="color: var(--btn-color);"></i>
             </td>
