--- a/front/src/app/component/admin/admin-edit-pending-recipes/admin-edit-pending-recipes.component.html
+++ b/front/src/app/component/admin/admin-edit-pending-recipes/admin-edit-pending-recipes.component.html
@@ -1,4 +1,5 @@
-<div class="container-fluid">
+<div class="container-fluid p-5">
+  <div class="form d-flex justify-content-center">
     <div class="row">
       <div class="main">
         <h1 class="fw-bold mb-4">Edit Pending Recipe</h1>
@@ -8,10 +9,12 @@
           <p>Go Back</p>
         </div>
       </div>
-        <div class="mb-2 col-lg-4">
-            <img [src]="editForm.get('image')?.value" alt="Recipe Image"  class="img-thumbnail" />
-        </div>
-        <div class="col-lg-8">
+
+      <div class="mb-2 col-lg-4">
+        <img [src]="editForm.get('image')?.value" alt="Recipe Image"  class="img-thumbnail" />
+      </div>
+
+      <div class="col-lg-8 formEdit">
             <form [formGroup]="editForm" (ngSubmit)="editRecipe()" >
             
                 <label for="recipeId" class="form-label">image:</label>
@@ -98,7 +101,8 @@
                   </div>
                 <button type="submit" class="btn text-light mt-4 mb-5">Save Changes</button>
             </form>
-        </div>
+      </div>
     </div>
+  </div>
 </div>
 
