--- a/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
+++ b/front/src/app/component/admin/admin-edit-recipes/admin-edit-recipes.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluid p-5">
+  <div class="form d-flex justify-content-center">
     <div class="row">
-      <div class="main">
-        <h1 class="fw-bold mb-4">Edit Recipe</h1>
-
-        <div class="back" routerLink="/admin">
-          <i class="fa-solid fa-chevron-left"></i>
-          <p>Go Back</p>
+        <div class="main">
+          <h1 class="fw-bold mb-4">Edit Recipe</h1>
+    
+          <div class="back" routerLink="/admin">
+            <i class="fa-solid fa-chevron-left"></i>
+            <p>Go Back</p>
+          </div>
         </div>
-      </div>
-
         <div class="mb-2 col-lg-4">
             <img [src]="editForm.get('image')?.value" alt="Recipe Image"  class="img-thumbnail" />
         </div>
-
         <div class="col-lg-8 formEdit">
             <form [formGroup]="editForm" (ngSubmit)="editRecipe()" >
+            
                 <label for="recipeId" class="form-label">image:</label>
                 <input type="text" class="form-control" id="recipeImage" (change)="onImageUpload($event)" accept="image/*" formControlName="image"/>
                 <div class="mb-3 ">
@@ -100,5 +100,7 @@
                 <button type="submit" class="btn text-light mt-4 mb-5">Save Changes</button>
             </form>
         </div>
+        
     </div>
+  </div>
 </div>
