--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -43,6 +43,42 @@
   <!-- premium ========================================================================================= -->
   <section class="recipes-wrapper mt-5" *ngIf="isPremium">
     <div class="title d-flex justify-content-between align-items-center">
+      <h1 class="fw-bold text-capitalize">Waiting for Aproval</h1>
+      <a routerLink="/add-recipe/{{ user.id }}" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
+    </div>
+    <div class="body mt-4 d-flex gap-3 overflow-x-auto" *ngIf="user.pending_recipes.length!=0">
+      <div *ngFor="let recipe of user?.pending_recipes">
+        <div
+          class="card border-0"
+          style="width: 300px; cursor: pointer"
+          (click)="onRecipeClick(recipe.id)"
+        >
+          <img
+            class="rounded card-img-top w-100 object-fit-cover"
+            src="{{ recipe?.image }}"
+            alt="Title"
+            style="height: 330px;"
+          />
+          <div class="card-body">
+            <h1 class="card-title h4">{{ recipe?.name }}</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row d-flex justify-content-center">
+      <!-- <div *ngIf="user.recipes.length==0 " class="col-lg-2 col-m-3 col-sm-3 col-4">
+      
+        <img src="assets/img/empty-box_4826310.png" alt="empty" class="w-100">
+      </div> -->
+      <div class="p-5"  *ngIf="user.pending_recipes.length==0">
+
+        <h3 class="text-center text-secondary p-5">No Submitted Recipes yet!!</h3>
+      </div>
+    </div>
+    
+  </section>
+  <section class="recipes-wrapper mt-5" *ngIf="isPremium">
+    <div class="title d-flex justify-content-between align-items-center">
       <h1 class="fw-bold text-capitalize">your magic</h1>
       <a routerLink="/add-recipe/{{ user.id }}" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
     </div>
@@ -70,7 +106,8 @@
       
         <img src="assets/img/empty-box_4826310.png" alt="empty" class="w-100">
       </div> -->
-      <div class="p-5">
+      <div class="p-5"  *ngIf="user.recipes.length==0">
+
         <h3 class="text-center text-secondary p-5">Share your culinary magic with us and get featured on our website! Send your favorite recipe  !!</h3>
       </div>
     </div>
