--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -44,10 +44,10 @@
   <section class="recipes-wrapper mt-5" *ngIf="isPremium">
     <div class="title d-flex justify-content-between align-items-center">
       <h1 class="fw-bold text-capitalize">Waiting for Aproval</h1>
-      <a routerLink="/add-recipe/{{ user.id }}" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
+      
     </div>
     <div class="body mt-4 d-flex gap-3 overflow-x-auto" *ngIf="user.pending_recipes.length!=0">
-      <div *ngFor="let recipe of user?.pending_recipes">
+      <div *ngFor="let recipe of user?.pending_recipes"  class="position-relative">
         <div
           class="card border-0"
           style="width: 300px; cursor: pointer"
@@ -59,6 +59,8 @@
             alt="Title"
             style="height: 330px;"
           />
+          <span class="badge bg-secondary position-absolute top-0 start-0 m-2" *ngIf="recipe.status=='pending'">{{recipe.status}}</span>
+          <span class="badge bg-danger position-absolute top-0 start-0 m-2"*ngIf="recipe.status=='denied'">{{recipe.status}}</span>
           <div class="card-body">
             <h1 class="card-title h4">{{ recipe?.name }}</h1>
           </div>
@@ -83,7 +85,7 @@
       <a routerLink="/add-recipe/{{ user.id }}" class="text-capitalize text-bold text-decoration-none btn btn-dark btn-sm px-lg-3 py-lg-2">add recipe</a>
     </div>
     <div class="body mt-4 d-flex gap-3 overflow-x-auto" *ngIf="user.recipes.length!=0">
-      <div *ngFor="let recipe of user?.recipes">
+      <div *ngFor="let recipe of user?.recipes" class="position-relative">
         <div
           class="card border-0"
           style="width: 300px; cursor: pointer"
@@ -95,6 +97,7 @@
             alt="Title"
             style="height: 330px;"
           />
+          <span class="badge bg-success position-absolute top-0 start-0 m-2">Accepted</span>
           <div class="card-body">
             <h1 class="card-title h4">{{ recipe?.name }}</h1>
           </div>
