--- a/front/src/app/component/about/about.component.html
+++ b/front/src/app/component/about/about.component.html
@@ -17,7 +17,7 @@
     </div>
   </div>
 </section>
-<section style="background-color: var(--main-background);">
+<section>
   <div class="team-section">
     <h1>Our Team</h1>
     <p>The team that made My Daily Recipes happen .</p>
@@ -31,5 +31,3 @@
    </div>
   </div>
 </section>
-
-
