--- a/front/src/app/component/login/login.component.html
+++ b/front/src/app/component/login/login.component.html
@@ -32,7 +32,7 @@
     }
     @if(authenticated){
         <div class="mb-2"><span class="text-danger fw-normal text-capitalize">Your Account is not verified </span></div>
-        <div class="mb-2"><a class="text-danger fw-normal text-capitalize" routerLink="/otp">Click here to verify </a></div>
+        <div class="mb-2"><a class="text-danger fw-normal text-capitalize" routerLink="/otp" data-bs-dismiss="modal">Click here to verify </a></div>
     }
 
 
