--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -5,7 +5,7 @@
 <div class="container my-5">
   <section class="user-details d-flex justify-content-between align-items-center">
     <h1 class="text-capitalize"><span class="fw-bold text-capitalize">hello</span> {{ user?.name }}</h1>
-    <a  data-bs-toggle="modal" data-bs-target="#exampleModal" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i></a>
+    <a  data-bs-toggle="modal" data-bs-target="#Edit" style="color: var(--main-color); font-size: 24px;"><i class="fa fa-cog" aria-hidden="true"></i></a>
   </section>
   <section class="recipes-wrapper mt-5">
     <div class="title">
