--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -92,7 +92,7 @@
           <i
             class="fa-heart favorite h2"
             [ngClass]="isSolid ? 'fa-solid' : 'fa-regular'"
-            (click)="onFavorite()"
+            (click)="onFavorite('loginModal')"
           ></i>
         </div>
 
@@ -112,7 +112,7 @@
                   (i >= starRate && currentHoveredStar === 0)
               }"
               [attr.data-value]="i + 1"
-              (click)="onStarClick(i + 1)"
+              (click)="onStarClick(i + 1,'loginModal')"
               (mouseenter)="onStarHover(i + 1)"
               (mouseleave)="onStarLeave()"
               
@@ -163,7 +163,7 @@
   <div class="comments-wrapper mt-5">
     <h3 class="title text-uppercase">comments</h3>
     <div class="body mt-3 border-top ">
-      <form  class="user-comment mt-5 text-start " [formGroup]="commentForm" (ngSubmit)="comment()">
+      <form  class="user-comment mt-5 text-start " [formGroup]="commentForm" (ngSubmit)="comment('loginModal')">
         <textarea
         class="form-control"
         name="user-comment-field"
