--- a/front/src/app/component/admin/admin-user/admin-user.component.html
+++ b/front/src/app/component/admin/admin-user/admin-user.component.html
@@ -28,11 +28,11 @@
 
             <!-- Delete Button -->
             <td class="text-center delete">
-                <a data-bs-toggle="modal" data-bs-target="#deleteUsermodal" style="cursor: pointer;">
+                <a data-bs-toggle="modal" [attr.data-bs-target]="'#deleteModal-' + data.id" style="cursor: pointer;">
                     <i class="fa-solid fa-trash text-danger"></i>
                 </a>
                 
-                <div class="modal fade" id="deleteUsermodal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" [attr.id]="'deleteModal-' + data.id" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered">
                         <div class="modal-content"> 
                             <div class="modal-body">
