adding premium recipe and disabling it for normal user

--- a/front/src/app/component/navbar/navbar.component.css
+++ b/front/src/app/component/navbar/navbar.component.css
@@ -89,3 +89,13 @@ li{
   color: var(--btn-color);
   cursor: pointer;
 }
+.active-premium i {
+  color:  #fcb900;
+}
+.active-premium span{
+  color: #fcb900;
+}
+.premium-hover:hover{
+  color: #FFAF45 !important;
+}
+
