--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -37,6 +37,12 @@
           <span>Profile</span>
         </a>
       </li>
+     <!--  <li *ngIf="premium">
+        <a routerLinkActive="active-premium" routerLink="/premium" class="premium-hover">
+          <i class="fa-solid fa-crown pb-1" ></i>
+          <span >Premium</span>
+        </a>
+      </li> -->
       <li *ngIf="isLogged && admin">
         <a routerLinkActive="active" routerLink="/admin">
           <i class="fa-solid fa-user pb-1"></i>
