--- a/front/src/app/component/recipes/recipes.component.css
+++ b/front/src/app/component/recipes/recipes.component.css
@@ -2,6 +2,7 @@
     background-color: #e9e9e8;
     margin-top: 10px;
     border-radius: 5%;
+    cursor: pointer;
 }
 .background:hover{
     background-color: #ffe0e0;
