--- a/front/src/app/component/recipes/recipes.component.html
+++ b/front/src/app/component/recipes/recipes.component.html
@@ -104,17 +104,17 @@
           <img class="rounded-image object-fit-cover" style="width: 100% !important; height: 330px !important;" [src]="item.image" alt="food">
           <span class="badge  position-absolute top-0 start-0 ms-3 mt-2" *ngIf="item.user?.role === 'premium'"><i class="fa-solid fa-crown pb-1" ></i></span>
         </div>
-        <div>
+        <div class="d-flex justify-content-between mt-2">
           <p class="red m-0">{{item.category.name}}</p>
-        </div>
-        <div>
-          <h5>{{item.name}}</h5>
-        </div>
-        <div class="d-flex justify-content-between">
-          <div class="d-flex">
-            <i class="fa fa-clock-o" style="font-size:24px"></i>
-            <p class="inline-block px-2" style="color: #666;">{{item.time}} mins</p>
+          <div class="d-flex  flex-row align-items-center mb-3">
+
+            <i class="fa-regular fa-clock" style="font-size:20px; "></i>
+
+            <p class="inline-block px-2 mb-0" style="color: #666;">{{item.time}} mins</p>
           </div>
+        </div>
+        <div class="mb-3">
+          <h5>{{item.name}}</h5>
         </div>
       </div>
     </div>
