Implement the functionality for the View All Latest and View All Recipes buttons.

--- a/front/src/app/component/home/home.component.css
+++ b/front/src/app/component/home/home.component.css
@@ -220,11 +220,14 @@ body{
     width: 100%;
 }
 
+.box{
+    cursor: pointer;
+}
 .box,.smallBox,.latestContent{
     transition: all 0.3s;
 }
 
-.box:hover,.smallBox:hover,.latestContent:hover{
+.box:hover,.latestContent:hover{
     opacity: 0.6;
 }
 
