--- a/front/src/app/component/home/home.component.html
+++ b/front/src/app/component/home/home.component.html
@@ -136,7 +136,7 @@
                 </div>
             }
         </div>
-        <a class="main-btn recipe" routerLink="/recipes">View All Recipes</a>
+        <a class="main-btn recipe" routerLink="/recipes" [queryParams]="{ reverse: 'true' }">View All Recipes</a>
     </div>
 </section>
 
