--- a/front/src/app/component/navbar/navbar.component.html
+++ b/front/src/app/component/navbar/navbar.component.html
@@ -20,7 +20,7 @@
         </a>
       </li>
       <li>
-        <a routerLinkActive="active" routerLink="/recipes">
+        <a routerLinkActive="active" routerLink="/recipes" [queryParams]="{ reverse: 'true' }">
           <i class="fa-solid fa-utensils"></i>
           <p>recipes</p>
         </a>
