--- a/front/src/app/component/profile/profile.component.html
+++ b/front/src/app/component/profile/profile.component.html
@@ -61,6 +61,9 @@
           />
           <span class="badge bg-secondary position-absolute top-0 start-0 m-2" *ngIf="recipe.status=='pending'">{{recipe.status}}</span>
           <span class="badge bg-danger position-absolute top-0 start-0 m-2"*ngIf="recipe.status=='denied'">{{recipe.status}}</span>
+          <span class="text-center position-absolute top-0 end-0 m-2" *ngIf="recipe.status=='denied'" (click)="editPendingRecipe(recipe?.id)">
+            <i class="fa-solid fa-pen-to-square" style="color: var(--main-color); font-size: 20px;" ></i>
+          </span>
           <div class="card-body">
             <h1 class="card-title h4">{{ recipe?.name }}</h1>
           </div>
