--- a/front/src/app/component/recipes/recipes.component.css
+++ b/front/src/app/component/recipes/recipes.component.css
@@ -19,6 +19,18 @@
 }
 .white{
     cursor: pointer;
+    
+}
+.white img {
+    transition: transform 0.3s ease; /* Smooth transition for the image */
+}
+  
+.white:hover img {
+    transform: scale(1.1); /* Scale up the image on hover */
+}
+.imagehover{
+    overflow: hidden;
+    border-radius: 5%;
 }
 
 .inline{
@@ -45,6 +57,7 @@ h6{
     width: 50px;
     
 }
+
 .my-svg {
     color: white;
     
