--- a/front/src/app/component/single-recipe/single-recipe.component.html
+++ b/front/src/app/component/single-recipe/single-recipe.component.html
@@ -150,8 +150,8 @@
           />
           <div class="card-body">
             <div class="time">
-              <span class="h6 me-2"><i class="fa fa-clock-o"></i></span>
-              <span class="h6">{{ recipe.time }}</span>
+              <span class="h6 me-2"><i class="fa-regular fa-clock"></i></span>
+              <span class="h6">{{ recipe.time }} mins</span>
             </div>
             <h4 class="card-title">{{ recipe?.name }}</h4>
           </div>
